<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.sharangirdhani.inclass04.MainActivity">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginTop="23dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:layout_toEndOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edtName"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/nameLabel"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="30dp"
            android:text="@string/deptLabel"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtDept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignEnd="@+id/edtName"
            android:layout_alignRight="@+id/edtName"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:text="@string/dept"
            android:layout_alignStart="@+id/edtName"
            android:layout_alignLeft="@+id/edtName" />

        <EditText
            android:id="@+id/edtAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edtDept"
            android:layout_alignStart="@+id/edtDept"
            android:layout_below="@+id/edtDept"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:text="@string/age"
            android:layout_alignEnd="@+id/buttonThread" />

        <EditText
            android:id="@+id/edtZIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/edtAge"
            android:layout_alignRight="@+id/edtAge"
            android:layout_below="@+id/edtAge"
            android:ems="10"
            android:textColor="@android:color/black"
            android:inputType="textPersonName"
            android:text="@string/zip"
            android:layout_alignStart="@+id/edtAge" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edtZIP"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:text="@string/ageLabel"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edtZIP"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:textColor="@android:color/black"
            android:text="@string/zipLabel"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:text="@string/password"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonThread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:layout_marginLeft="30dp"
            android:textColor="@android:color/black"
            android:layout_marginRight="30dp"
            android:text="@string/buttonThread"
            android:onClick="generatePasswordsUsingThreads"/>

        <Button
            android:id="@+id/buttonAsync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonThread"
            android:textColor="@android:color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/buttonAsync"
            android:onClick="generatePasswordsUsingAsync"/>

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/buttonClear"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/textView2"
            android:textColor="@android:color/black"
            android:layout_toEndOf="@+id/textView2"
            android:onClick="buttonClear"/>

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:text="@string/buttonClose"
            android:layout_marginRight="46dp"
            android:layout_marginEnd="46dp"
            android:layout_alignBaseline="@+id/buttonClear"
            android:layout_alignBottom="@+id/buttonClear"
            android:layout_alignRight="@+id/edtZIP"
            android:layout_alignEnd="@+id/edtZIP"
            android:onClick="buttonClose"/>

        <TextView
            android:id="@+id/textViewShowPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_above="@+id/buttonClear"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="27dp"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:text=""
            android:textAlignment="center"
            android:textSize="18sp" />
    </RelativeLayout>
</layout>